js/js.translator/testData/incremental/invalidation/exceptionsFromInlineFunction/lib2/l2.0.kt
fun qux(): Int {
    return foo()
}
